testing layout home tailwind

--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -211,6 +211,9 @@
             <button mat-mini-fab color="accent" class="bg-pink-500 hover:bg-pink-600">
               <mat-icon>favorite</mat-icon>
             </button>
+            <!-- Button using tertiary color -->
+            <button mat-raised-button class="tertiary-button">Tertiary Button</button>
+
           </div>
         </div>
       </section>
