testing layout home tailwind

--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -214,6 +214,13 @@
             <!-- Button using tertiary color -->
             <button mat-raised-button class="tertiary-button">Tertiary Button</button>
 
+            <button class="bg-primary-500 text-white hover:bg-primary-600 px-4 py-2 rounded">
+              Primary Button
+            </button>
+
+            <p class="text-body-medium text-neutral-700">
+              This is a paragraph using Material 3 typography and colors.
+            </p>
           </div>
         </div>
       </section>
