--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,22 +6,33 @@
 @tailwind utilities;
 
 
-$theme: mat.define-theme((
-  color: (
-    theme-type: light,
-    primary: palettes.$adam-palette,
-    tertiary: palettes.$green-palette,
-    ),
-      density: (
-        scale: -1
-    )
-  ));
+$theme: mat.define-theme((color: (theme-type: light,
+        primary: palettes.$adam-palette,
+        tertiary: palettes.$green-palette,
+      ),
+      density: (scale: -1)));
 
-:root{
+:root {
   @include mat.all-component-themes($theme);
+
+  // Generate CSS variables for each color and tone
+  @each $color in (primary, secondary, tertiary, neutral, neutral-variant, error) {
+    @each $tone in (0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 95, 99, 100) {
+      --mat-#{$color}-#{$tone}: #{mat.get-theme-color($theme, $color, $tone)};
+    }
+  }
 }
+
 .tertiary-button {
   @include mat.button-color($theme, $color-variant: tertiary);
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
