--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,7 +46,7 @@ $theme: mat.define-theme((
 // @include mat.color-variants-backwards-compatibility($tail-mat-ng-theme);
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0;  }
 
 .tertiary-button {
   @include mat.button-color($theme, $color-variant: tertiary);
