--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,18 +4,18 @@
 @use '@angular/material' as mat;
 // Plus imports for other components in your app.
 @use './_m3-palettes' as palettes; // Import your custom palette
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+// @tailwind base;
+// @tailwind components;
+// @tailwind utilities;
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat.core();
+// @include mat.core();
 
 // Define the theme object.
 $theme: mat.define-theme((
   color: (
-    theme-type: light,
+    theme-type: dark,
     primary: palettes.$adam-palette,
     tertiary: palettes.$green-palette,
   ),
@@ -29,13 +29,15 @@ $theme: mat.define-theme((
 // that you are using.
 :root {
   @include mat.all-component-themes($theme);
+  @include mat.typography-hierarchy($theme);
+  --mat-app-surface: green;  // Override the surface color
 
-  // Generate CSS variables for each color and tone from palette.
-  @each $color in (primary, secondary, tertiary, neutral, neutral-variant, error) {
-    @each $tone in (0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 95, 99, 100) {
-      --mat-#{$color}-#{$tone}: #{mat.get-theme-color($theme, $color, $tone)};
-    }
-  }
+  // // Generate CSS variables for each color and tone from palette.
+  // @each $color in (primary, secondary, tertiary, neutral, neutral-variant, error) {
+  //   @each $tone in (0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 95, 99, 100) {
+  //     --mat-#{$color}-#{$tone}: #{mat.get-theme-color($theme, $color, $tone)};
+  //   }
+  // }
 }
 
 // Comment out the line below if you want to use the pre-defined typography utility classes.
