theming and with custom overrides and more

--- a/src/app/_pages/applications/applications.component.html
+++ b/src/app/_pages/applications/applications.component.html
@@ -1,3 +1,8 @@
+<button mat-button>Basic</button>
+<button mat-raised-button>Raised</button>
+<button mat-stroked-button>Stroked</button>
+<button mat-flat-button>Flat</button>
+
 <body class="bg-neutral-100 text-neutral-900">
   <div class="container mx-auto px-4">
     <header class="py-6">
