--- a/src/app/shared/components/color-picker/color-picker.component.html
+++ b/src/app/shared/components/color-picker/color-picker.component.html
@@ -11,6 +11,6 @@ name="color-picker"
 id="color-picker"
 class="color-picker-input"
 #colorPickerInput
-[value]="color"
+[value]="color()"
 (input)="changeTheme($event)"
 />
