--- a/src/app/_layouts/main-app-layout/main-app-layout.component.html
+++ b/src/app/_layouts/main-app-layout/main-app-layout.component.html
@@ -4,32 +4,47 @@
     <mat-icon class="app-icon">bolt</mat-icon>
 
     <nav class="menu">
-      @for (item of menuItems; track item) {
-        @if (!item.subItems) {
-          <a mat-button [routerLink]="[item.route]">
-            <mat-icon>{{ item.icon }}</mat-icon>
-            {{ item.label }}
-          </a>
-        } @else {
-          <button mat-button [matMenuTriggerFor]="menu">
-            <mat-icon>{{ item.icon }}</mat-icon>
-            {{ item.label }}
-            <mat-icon>arrow_drop_down</mat-icon>
-          </button>
-          <mat-menu #menu="matMenu">
-            @for (subItem of item.subItems; track subItem) {
-              <a mat-menu-item [routerLink]="[item.route, subItem.route]">
-                <mat-icon>{{ subItem.icon }}</mat-icon>
-                {{ subItem.label }}
-              </a>
-            }
-          </mat-menu>
+      @for (item of menuItems; track item) { @if (!item.subItems) {
+      <a mat-button [routerLink]="[item.route]">
+        <mat-icon>{{ item.icon }}</mat-icon>
+        {{ item.label }}
+      </a>
+      } @else {
+      <button mat-button [matMenuTriggerFor]="menu">
+        <mat-icon>{{ item.icon }}</mat-icon>
+        {{ item.label }}
+        <mat-icon>arrow_drop_down</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        @for (subItem of item.subItems; track subItem) {
+        <a mat-menu-item [routerLink]="[item.route, subItem.route]">
+          <mat-icon>{{ subItem.icon }}</mat-icon>
+          {{ subItem.label }}
+        </a>
         }
-      }
+      </mat-menu>
+      } }
     </nav>
 
     <span class="spacer"></span>
-
+    <!-- Theme Toggler -->
+    <button
+      mat-icon-button
+      class="theme-toggle"
+      aria-label="Change theme"
+      [matMenuTriggerFor]="themeMenu"
+    >
+      <mat-icon>{{
+        (isDark$ | async) === true ? "dark_mode" : "light_mode"
+      }}</mat-icon>
+    </button>
+    <!-- Color Picker -->
+    <app-color-picker class="color-picker"></app-color-picker>
+    <mat-menu #themeMenu="matMenu">
+      <button mat-menu-item (click)="changeTheme('auto')">System</button>
+      <button mat-menu-item (click)="changeTheme('light')">Light</button>
+      <button mat-menu-item (click)="changeTheme('dark')">Dark</button>
+    </mat-menu>
     <!-- Profile Button -->
     <button mat-icon-button [matMenuTriggerFor]="profileMenu">
       <mat-icon>account_circle</mat-icon>
@@ -54,12 +69,12 @@
 
 <main>
   @if (loading()) {
-    <div class="spinner-container">
-      <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
-    </div>
+  <div class="spinner-container">
+    <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+  </div>
   } @else {
-    <ng-container #content>
-      <router-outlet></router-outlet>
-    </ng-container>
+  <ng-container #content>
+    <router-outlet></router-outlet>
+  </ng-container>
   }
 </main>
