have sidenav and main menu working

--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -1,7 +1,6 @@
 <div>
-
   <mat-nav-list>
-    @for (item of menuItems(); track item.label) {
+    @for (item of menuItems; track item.label) {
       <app-sidenav-menu-item [item]="item" [collapsed]="collapsed()" ></app-sidenav-menu-item>
     }
   </mat-nav-list>
