--- a/src/app/_layouts/main-app-layout/main-app-layout.component.html
+++ b/src/app/_layouts/main-app-layout/main-app-layout.component.html
@@ -75,6 +75,7 @@
     >
       <app-sidenav
         [collapsed]="collapsed()"
+        [menuItems]="sideNavItems"
       ></app-sidenav>
     </mat-sidenav>
     <mat-sidenav-content class="content" [style.margin-left]="sidenavWidth()">
