--- a/src/app/_layouts/main-app-layout/main-app-layout.component.html
+++ b/src/app/_layouts/main-app-layout/main-app-layout.component.html
@@ -73,6 +73,9 @@
       mode="side"
       [style.width]="sidenavWidth()"
     >
+    <button mat-icon-button (click)="toggleCollapse()">
+      <mat-icon>{{ collapsed() ? 'keyboard_double_arrow_right' : 'keyboard_double_arrow_left' }}</mat-icon>
+    </button>
       <app-sidenav
         [collapsed]="collapsed()"
         [menuItems]="sideNavItems"
