--- a/src/app/_layouts/main-app-layout/main-app-layout.component.html
+++ b/src/app/_layouts/main-app-layout/main-app-layout.component.html
@@ -68,14 +68,22 @@
 
 
   <mat-sidenav-container>
+
     <mat-sidenav
       opened
       mode="side"
       [style.width]="sidenavWidth()"
     >
-    <button mat-icon-button (click)="toggleCollapse()">
-      <mat-icon>{{ collapsed() ? 'keyboard_double_arrow_right' : 'keyboard_double_arrow_left' }}</mat-icon>
-    </button>
+    <!-- <button mat-icon-button (click)="collapsed.set(!collapsed())">
+      <mat-icon>menu</mat-icon>
+    </button> -->
+      <!-- Button Container for Proper Positioning -->
+      <div class="sidenav-toggle-button" >
+        <button mat-icon-button (click)="collapsed.set(!collapsed())">
+          <mat-icon>{{ collapsed() ? 'keyboard_double_arrow_right' : 'keyboard_double_arrow_left' }}</mat-icon>
+        </button>
+      </div>
+      <!-- Sidenav menu items -->
       <app-sidenav
         [collapsed]="collapsed()"
         [menuItems]="sideNavItems"
