--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -1,4 +1,10 @@
-
+<!--
+<div class="sidenav-header">
+  <div class="header-text" [class.hide-header-text]="collapsed()">
+    <h2>Your channel</h2>
+    <p>Zoaib Khan</p>
+  </div>
+</div> -->
 <mat-nav-list>
   @for (item of menuItems(); track item.label) {
     <app-sidenav-menu-item [item]="item" [collapsed]="collapsed()" ></app-sidenav-menu-item>
