--- a/src/app/shared/components/sidenav/sidenav.component.scss
+++ b/src/app/shared/components/sidenav/sidenav.component.scss
@@ -1,22 +1,38 @@
-// .sidenav-header {
-//   padding-top: 24px;
-//   text-align: left;
+:host * {
+  transition: all 500ms ease-in-out;
+}
 
-//   .header-text {
-//     height: 3rem;
-//     > h2 {
-//       margin: 0;
-//       font-size: 1rem;
-//     }
+.sidenav-header {
+  padding-top: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-//     > p {
-//       margin: 0;
-//       font-size: 0.8rem;
-//     }
-//   }
-// }
+  > img {
+    object-fit: cover;
+    object-position: center;
+    border-radius: 100%;
+    margin-bottom: 10px;
+  }
 
-// .hide-header-text {
-//   opacity: 0;
-//   height: 0 !important;
-// }
+  .header-text {
+    text-align: center;
+    height: 3rem;
+
+    > h2 {
+      margin: 0;
+      font-size: 1rem;
+      line-height: 1.5rem;
+    }
+
+    > p {
+      margin: 0;
+      font-size: 0.8rem;
+    }
+  }
+}
+
+.hide-header-text {
+  height: 0 !important;
+  opacity: 0;
+}
