--- a/src/app/_layouts/main-app-layout/main-app-layout.component.html
+++ b/src/app/_layouts/main-app-layout/main-app-layout.component.html
@@ -77,6 +77,7 @@
     <!-- <button mat-icon-button (click)="collapsed.set(!collapsed())">
       <mat-icon>menu</mat-icon>
     </button> -->
+    <div class="sidenav-content">
       <!-- Button Container for Proper Positioning -->
       <div class="sidenav-toggle-button" >
         <button mat-icon-button (click)="collapsed.set(!collapsed())">
@@ -88,6 +89,7 @@
         [collapsed]="collapsed()"
         [menuItems]="sideNavItems"
       ></app-sidenav>
+    </div>
     </mat-sidenav>
     <mat-sidenav-content class="content" [style.margin-left]="sidenavWidth()">
       @if (loading()) {
