not sure but stashing

--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -12,3 +12,9 @@
   }
 </mat-nav-list>
 
+<!-- @for (item of activeMenuItems(); track item.label) {
+  <app-sidenav-menu-item
+    [item]="item"
+    [collapsed]="collapsed()"
+  ></app-sidenav-menu-item>
+} -->
